discord-bot/src/test/resources/cocos/guild/invalid/RoleGroupEntriesAreUnique.gld
guild 12345L {
    prefix "prefix"
    blacklist "expression"
    subreddit "x" {
        channel : 0L
    }
    rolegroup "c" {
        role : 9L
    }
    rolegroup "d" {
        role : 9L
    }
}
